target/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Body'", "'Else'", "'EndFor'", "'If'", "'Var'", "'EndDo'", 
                     "'Break'", "'ElseIf'", "'EndWhile'", "'Parameter'", 
                     "'While'", "'Continue'", "'EndBody'", "'For'", "'Return'", 
                     "'True'", "'Do'", "'EndIf'", "'Function'", "'Then'", 
                     "'False'", "'+'", "'+.'", "'-'", "'-.'", "'*'", "'*.'", 
                     "'\\'", "'\\.'", "'%'", "'!'", "'&&'", "'||'", "'='", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'=/='", 
                     "'<.'", "'>.'", "'<=.'", "'>=.'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "':'", "'.'", "','", "';'", "'_'" ]

    symbolicNames = [ "<INVALID>", "WS", "COMMENT", "ID", "BODY", "ELSE", 
                      "ENDFOR", "IF", "VAR", "ENDDO", "BREAK", "ELSEIF", 
                      "ENDWHILE", "PARAMETER", "WHILE", "CONTINUE", "ENDBODY", 
                      "FOR", "RETURN", "TRUE", "DO", "ENDIF", "FUNCTION", 
                      "THEN", "FALSE", "ADDINT", "ADDFLOAT", "SUBINT", "SUBFLOAT", 
                      "MULINT", "MULFLOAT", "DIVINT", "DIVFLOAT", "MOD", 
                      "NOT", "AND", "OR", "SINGLE_EQUAL", "EQUAL", "NOTEQUALINT", 
                      "LESSTHANINT", "GREATERTHANINT", "LESSEQUALINT", "GREATEREQUALINT", 
                      "NOTEQUALFLOAT", "LESSTHANFLOAT", "GREATERTHANFLOAT", 
                      "LESSEQUALFLOAT", "GREATEREQUALFLOAT", "LRB", "RRB", 
                      "LSB", "RSB", "LB", "RB", "COLON", "DOT", "COMMA", 
                      "SEMI", "UNDERSCORE", "INTLIT", "FLOATLIT", "BOOLEAN", 
                      "STRING", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_manydeclaration = 1
    RULE_declarations = 2
    RULE_var_declarations = 3
    RULE_variable_list = 4
    RULE_var_part = 5
    RULE_un_init_var = 6
    RULE_init_var = 7
    RULE_var_name = 8
    RULE_dimension = 9
    RULE_normal_literals = 10
    RULE_main_statement = 11
    RULE_parameter_list = 12
    RULE_var_body = 13
    RULE_statement_lists = 14
    RULE_statement_list = 15
    RULE_assign_statement = 16
    RULE_lhs = 17
    RULE_body_part = 18
    RULE_if_statement = 19
    RULE_elseif_part = 20
    RULE_else_part = 21
    RULE_for_statement = 22
    RULE_init_exp = 23
    RULE_condition_exp = 24
    RULE_update_exp = 25
    RULE_while_statement = 26
    RULE_do_while_statement = 27
    RULE_break_statement = 28
    RULE_continue_statement = 29
    RULE_call_statement = 30
    RULE_return_statement = 31
    RULE_exp = 32
    RULE_exp1 = 33
    RULE_exp2 = 34
    RULE_exp3 = 35
    RULE_exp4 = 36
    RULE_exp5 = 37
    RULE_exp6 = 38
    RULE_literals = 39
    RULE_array_name = 40
    RULE_dimen = 41
    RULE_index_expression = 42
    RULE_index_operator = 43
    RULE_index_expression_name = 44
    RULE_function_call = 45
    RULE_argument_list = 46
    RULE_array_literal = 47
    RULE_many_array = 48
    RULE_one_array = 49
    RULE_array_value = 50

    ruleNames =  [ "program", "manydeclaration", "declarations", "var_declarations", 
                   "variable_list", "var_part", "un_init_var", "init_var", 
                   "var_name", "dimension", "normal_literals", "main_statement", 
                   "parameter_list", "var_body", "statement_lists", "statement_list", 
                   "assign_statement", "lhs", "body_part", "if_statement", 
                   "elseif_part", "else_part", "for_statement", "init_exp", 
                   "condition_exp", "update_exp", "while_statement", "do_while_statement", 
                   "break_statement", "continue_statement", "call_statement", 
                   "return_statement", "exp", "exp1", "exp2", "exp3", "exp4", 
                   "exp5", "exp6", "literals", "array_name", "dimen", "index_expression", 
                   "index_operator", "index_expression_name", "function_call", 
                   "argument_list", "array_literal", "many_array", "one_array", 
                   "array_value" ]

    EOF = Token.EOF
    WS=1
    COMMENT=2
    ID=3
    BODY=4
    ELSE=5
    ENDFOR=6
    IF=7
    VAR=8
    ENDDO=9
    BREAK=10
    ELSEIF=11
    ENDWHILE=12
    PARAMETER=13
    WHILE=14
    CONTINUE=15
    ENDBODY=16
    FOR=17
    RETURN=18
    TRUE=19
    DO=20
    ENDIF=21
    FUNCTION=22
    THEN=23
    FALSE=24
    ADDINT=25
    ADDFLOAT=26
    SUBINT=27
    SUBFLOAT=28
    MULINT=29
    MULFLOAT=30
    DIVINT=31
    DIVFLOAT=32
    MOD=33
    NOT=34
    AND=35
    OR=36
    SINGLE_EQUAL=37
    EQUAL=38
    NOTEQUALINT=39
    LESSTHANINT=40
    GREATERTHANINT=41
    LESSEQUALINT=42
    GREATEREQUALINT=43
    NOTEQUALFLOAT=44
    LESSTHANFLOAT=45
    GREATERTHANFLOAT=46
    LESSEQUALFLOAT=47
    GREATEREQUALFLOAT=48
    LRB=49
    RRB=50
    LSB=51
    RSB=52
    LB=53
    RB=54
    COLON=55
    DOT=56
    COMMA=57
    SEMI=58
    UNDERSCORE=59
    INTLIT=60
    FLOATLIT=61
    BOOLEAN=62
    STRING=63
    ILLEGAL_ESCAPE=64
    UNCLOSE_STRING=65
    ERROR_CHAR=66
    UNTERMINATED_COMMENT=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def manydeclaration(self):
            return self.getTypedRuleContext(BKITParser.ManydeclarationContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.VAR or _la==BKITParser.FUNCTION:
                self.state = 102
                self.manydeclaration()


            self.state = 105
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarations(self):
            return self.getTypedRuleContext(BKITParser.DeclarationsContext,0)


        def manydeclaration(self):
            return self.getTypedRuleContext(BKITParser.ManydeclarationContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_manydeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManydeclaration" ):
                return visitor.visitManydeclaration(self)
            else:
                return visitor.visitChildren(self)




    def manydeclaration(self):

        localctx = BKITParser.ManydeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydeclaration)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.declarations()
                self.state = 108
                self.manydeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.declarations()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declarations(self):
            return self.getTypedRuleContext(BKITParser.Var_declarationsContext,0)


        def main_statement(self):
            return self.getTypedRuleContext(BKITParser.Main_statementContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_declarations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarations" ):
                return visitor.visitDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def declarations(self):

        localctx = BKITParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarations)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.var_declarations()
                pass
            elif token in [BKITParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.main_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def variable_list(self):
            return self.getTypedRuleContext(BKITParser.Variable_listContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_declarations

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declarations" ):
                return visitor.visitVar_declarations(self)
            else:
                return visitor.visitChildren(self)




    def var_declarations(self):

        localctx = BKITParser.Var_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_declarations)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(BKITParser.VAR)
            self.state = 118
            self.match(BKITParser.COLON)
            self.state = 119
            self.variable_list()
            self.state = 120
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_part(self):
            return self.getTypedRuleContext(BKITParser.Var_partContext,0)


        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def variable_list(self):
            return self.getTypedRuleContext(BKITParser.Variable_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_list" ):
                return visitor.visitVariable_list(self)
            else:
                return visitor.visitChildren(self)




    def variable_list(self):

        localctx = BKITParser.Variable_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable_list)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.var_part()
                self.state = 123
                self.match(BKITParser.COMMA)
                self.state = 124
                self.variable_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.var_part()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init_var(self):
            return self.getTypedRuleContext(BKITParser.Init_varContext,0)


        def un_init_var(self):
            return self.getTypedRuleContext(BKITParser.Un_init_varContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_part" ):
                return visitor.visitVar_part(self)
            else:
                return visitor.visitChildren(self)




    def var_part(self):

        localctx = BKITParser.Var_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_part)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.init_var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.un_init_var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Un_init_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_un_init_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUn_init_var" ):
                return visitor.visitUn_init_var(self)
            else:
                return visitor.visitChildren(self)




    def un_init_var(self):

        localctx = BKITParser.Un_init_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_un_init_var)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(BKITParser.ID)
                self.state = 135
                self.dimension()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def SINGLE_EQUAL(self):
            return self.getToken(BKITParser.SINGLE_EQUAL, 0)

        def normal_literals(self):
            return self.getTypedRuleContext(BKITParser.Normal_literalsContext,0)


        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def array_literal(self):
            return self.getTypedRuleContext(BKITParser.Array_literalContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_init_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit_var" ):
                return visitor.visitInit_var(self)
            else:
                return visitor.visitChildren(self)




    def init_var(self):

        localctx = BKITParser.Init_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_init_var)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(BKITParser.ID)
                self.state = 139
                self.match(BKITParser.SINGLE_EQUAL)
                self.state = 140
                self.normal_literals()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(BKITParser.ID)
                self.state = 142
                self.dimension()
                self.state = 143
                self.match(BKITParser.SINGLE_EQUAL)
                self.state = 144
                self.array_literal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_name" ):
                return visitor.visitVar_name(self)
            else:
                return visitor.visitChildren(self)




    def var_name(self):

        localctx = BKITParser.Var_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_name)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.match(BKITParser.ID)
                self.state = 150
                self.dimension()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_dimension

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension" ):
                return visitor.visitDimension(self)
            else:
                return visitor.visitChildren(self)




    def dimension(self):

        localctx = BKITParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dimension)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(BKITParser.LSB)
                self.state = 154
                self.match(BKITParser.INTLIT)
                self.state = 155
                self.match(BKITParser.RSB)
                self.state = 156
                self.dimension()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(BKITParser.LSB)
                self.state = 158
                self.match(BKITParser.INTLIT)
                self.state = 159
                self.match(BKITParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Normal_literalsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKITParser.FLOATLIT, 0)

        def TRUE(self):
            return self.getToken(BKITParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(BKITParser.FALSE, 0)

        def STRING(self):
            return self.getToken(BKITParser.STRING, 0)

        def one_array(self):
            return self.getTypedRuleContext(BKITParser.One_arrayContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_normal_literals

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNormal_literals" ):
                return visitor.visitNormal_literals(self)
            else:
                return visitor.visitChildren(self)




    def normal_literals(self):
